--- a/FTCollectorApp/View/EquipmenReturnPage.xaml
+++ b/FTCollectorApp/View/EquipmenReturnPage.xaml
@@ -7,14 +7,14 @@
         <StackLayout Padding="20">
             <Label FontSize="Large" Text="Equipment Return" HorizontalOptions="Center"/>
             <Picker x:Name="eqIncharge"/>
-            <forms:SignaturePadView x:Name="signaturePad"  
+            <forms:SignaturePadView x:Name="signaturePad"  BackgroundImage="sign_bg.png"
       BackgroundColor="LightGray"  
       StrokeColor="Black"  
       StrokeWidth="3"  
       WidthRequest="280"  
       HeightRequest="120"/>
             <Button x:Name="SaveBtn"  
-                  Text="Save"  
+                  Text="Save and Continue"  
                   BackgroundColor="Gray"  
                   Clicked="SaveBtn_Clicked"/>
             <Button x:Name="ClearBtn"  
