--- a/FTCollectorApp/View/SitesPage/BuildingSitePage.xaml
+++ b/FTCollectorApp/View/SitesPage/BuildingSitePage.xaml
@@ -15,21 +15,21 @@
                     <StackLayout Padding="20" VerticalOptions="CenterAndExpand">
                         <Label Text="Building" FontSize="Large" HorizontalOptions="Center"/>
                         <Label Text="Site Type*" HorizontalOptions="Start"/>
-                        <local:BorderColorEntry IsReadOnly="True" x:Name="entrySiteType" IsEnabled="False" HorizontalOptions="Start"/>
+                        <local:BorderColorEntry IsReadOnly="True" x:Name="entrySiteType" IsEnabled="False" HorizontalOptions="FillAndExpand"/>
                         <Label Text="Enter PCS tag number*" HorizontalOptions="Start"/>
-                        <local:BorderColorEntry IsReadOnly="True" x:Name="entryTagNum" IsEnabled="False" HorizontalOptions="Start"/>
+                        <local:BorderColorEntry IsReadOnly="True" x:Name="entryTagNum" IsEnabled="False" HorizontalOptions="FillAndExpand"/>
                         <Label Text="Owner or Customer" HorizontalOptions="Start"/>
-                        <local:BorderColorEntry IsReadOnly="True" x:Name="ownerName"  HorizontalOptions="Start"/>
+                        <local:BorderColorEntry IsReadOnly="True" x:Name="ownerName"  HorizontalOptions="FillAndExpand"/>
                         <Label Text="Enter owners tag number" HorizontalOptions="Start"/>
-                        <local:BorderEntry x:Name="ownerTagNumber"  HorizontalOptions="Start"/>
+                        <local:BorderEntry x:Name="ownerTagNumber"  HorizontalOptions="FillAndExpand"/>
                         <Label Text="Enter Property Id" HorizontalOptions="Start"/>
-                        <local:BorderEntry x:Name="entryPropertyId"  HorizontalOptions="Start"/>
+                        <local:BorderEntry x:Name="entryPropertyId"  HorizontalOptions="FillAndExpand"/>
                         <Label Text="Enter site name" HorizontalOptions="Start"/>
-                        <local:BorderEntry x:Name="entrySiteName"  HorizontalOptions="Start"/>
+                        <local:BorderEntry x:Name="entrySiteName"  HorizontalOptions="FillAndExpand"/>
                         <Label Text="Enter Street Address" HorizontalOptions="Start"/>
-                        <local:BorderEntry x:Name="entryStreetAddr"  HorizontalOptions="Start"/>
+                        <local:BorderEntry x:Name="entryStreetAddr"  HorizontalOptions="FillAndExpand"/>
                         <Label Text="Enter Postal Code" HorizontalOptions="Start"/>
-                        <local:BorderEntry x:Name="entryPostalCode"  HorizontalOptions="Start"/>
+                        <local:BorderEntry x:Name="entryPostalCode"  HorizontalOptions="FillAndExpand"/>
                         
                         <Grid Padding="0,5,10,5" RowDefinitions="*,*,*,*" ColumnDefinitions="*,*,*">
                             <Label Grid.Row="0" Grid.Column="0" Text="Lane closure required"/>
@@ -43,25 +43,55 @@
                             <Label Grid.Row="2" Grid.Column="2" Text="Enter Comms provider"/>
                             <local:Dropdown Grid.Row="3" Grid.Column="0" x:Name="pickerElectSiteKey"/>
                             <local:Dropdown Grid.Row="3" Grid.Column="1" x:Name="picker3rdpComms"/>
-                            <Entry Grid.Row="3"  Grid.Column="2" x:Name="commsProvide"/>
+                            <local:BorderEntry Grid.Row="3"  Grid.Column="2" x:Name="commsProvide"/>
                         </Grid>
                         
                         <Label Text="Enter UDS owner"/>
-                        <local:BorderEntry x:Name="UDSOwner"/>
+                        <local:BorderEntry x:Name="UDSOwner" HorizontalOptions="FillAndExpand"/>
                         <Label Text="Building Classification"/>
-                        <Picker x:Name="buildingClass">
-                            <Picker.Items>
-                                <x:String>City Facility</x:String>
-                                <x:String>County Facility</x:String>
-                                <x:String>Other Agency Facility</x:String>
-                                <x:String>Private Partner Facility</x:String>
-                                <x:String>Shelter – Aboveground</x:String>
-                                <x:String>Shelter – Underground</x:String>
-                                <x:String>Utility Company Facility</x:String>
-                            </Picker.Items>
-                        </Picker>
+                        <local:Dropdown x:Name="buildingClass" HorizontalOptions="FillAndExpand"/>
+                        <Label Text="Choose an intersection"/>
+                        <local:Dropdown x:Name="pIntersection" HorizontalOptions="FillAndExpand"/>                        
                         <Label Text="Choose a roadway"/>
-                        <Picker x:Name="pRoadway"/>
+                        <local:Dropdown x:Name="pRoadway" HorizontalOptions="FillAndExpand"/>
+                        <Label Text="Direction of Travel"/>
+                        <local:Dropdown x:Name="pDirTravel" HorizontalOptions="FillAndExpand"/>
+                        <Label Text="Orientation"/>
+                        <local:Dropdown x:Name="pOrientation" HorizontalOptions="FillAndExpand"/>
+                        <Label Text="Material"/>
+                        <local:Dropdown x:Name="pMaterial" HorizontalOptions="FillAndExpand"/>
+                        <Label Text="Mounting"/>
+                        <local:Dropdown x:Name="pMounting" HorizontalOptions="FillAndExpand"/>
+                        <Label Text="Filter Type"/>
+                        <local:Dropdown x:Name="pFilterType" HorizontalOptions="FillAndExpand"/>
+                        <Label Text="Filter Size"/>
+                        <local:Dropdown x:Name="pFilterSize" HorizontalOptions="FillAndExpand"/>
+                        <Label Text="Enter serial number" />
+                        <local:BorderEntry x:Name="entrySerial" HorizontalOptions="FillAndExpand"/>
+                        <Label Text="Enter manufactured" />
+                        <DatePicker x:Name="dateManufactured" HorizontalOptions="FillAndExpand"/>
+                        <Label Text="Installed at" />
+                        <DatePicker x:Name="dateInstalled" HorizontalOptions="FillAndExpand"/>
+                        <Label Text="Enter notes and comments"/>
+                        <Editor x:Name="editorNotes" Placeholder="Enter notes here" 
+                                HorizontalOptions="FillAndExpand" MaxLength="250"   />
+
+                        <Grid Padding="0,5,10,5" RowDefinitions="*,*,*,*" ColumnDefinitions="*,*,*">
+                            <Label Grid.Row="0" Grid.Column="0" Text="Does it have a sun shield"/>
+                            <Label Grid.Row="0" Grid.Column="1" Text="Has Ground Rod"/>
+                            <Label Grid.Row="0" Grid.Column="2" Text="Has Key"/>
+                            <local:Dropdown Grid.Row="1" Grid.Column="0" x:Name="pHaveSunShield"/>
+                            <local:Dropdown Grid.Row="1" Grid.Column="1" x:Name="pHasGround"/>
+                            <local:Dropdown Grid.Row="1" Grid.Column="2" x:Name="pHasKey"/>
+                            <Label Grid.Row="2" Grid.Column="0" Text="Key Type"/>
+                            <local:Dropdown Grid.Row="3" Grid.Column="0" x:Name="pKeyType"/>
+                            <Label Grid.Row="4" Grid.Column="0" Text="Direction of Travel"/>
+                            <Label Grid.Row="4" Grid.Column="1" Text="Is site in a clear Zone?"/>
+                            <Label Grid.Row="4" Grid.Column="2" Text="Bucket Truck"/>
+                            <local:Dropdown Grid.Row="5" Grid.Column="0" x:Name="pDirectionTravel"/>
+                            <local:Dropdown Grid.Row="5" Grid.Column="1" x:Name="pIsSiteClearZone"/>
+                            <local:Dropdown Grid.Row="5" Grid.Column="2" x:Name="pBucketTruck"/>                            
+                        </Grid>
                     </StackLayout>
 
                 </ScrollView>
